[package]
name = "advent-of-code-2024"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# bitvec = "1.0.1"
# colored = "2"
# graphlib = "0.6.3"
# hex = "0.4.3"
# itertools = "0.13.0"
ndarray = "0.16.1"
regex = "1.11.1"
# num = "0.4.3"
# pathfinding = "4.11.0"
# phf = { version = "0.11.2", features = ["macros"] }
# rand = "0.8.5"
# strum = "0.26.3"
# strum_macros = "0.26.4"
